/*
 * $Id: ChangeLog,v 1.2349 2004/02/21 04:45:18 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-20 21:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hash.c
    ! Fixed memory leak in HB_FUNC( HCLONE ) (few more are still pending)

2004-02-20 20:49 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/garbage.c
    + Added paramater bForce to hb_gcCollectAll()

  * source/rtl/hbserv.c
  * source/rtl/idle.c
    * Changed calls of hb_gcCollectAll() to hb_gcCollectAll( FALSE )

  * source/vm/hvm.c
    * Changed call of hb_gcCollectAll() to hb_gcCollectAll( TRUE ) to force collection
      on app termination even if collection is not justified - to avoid false warnings
      of memory leaks.

  * source/vm/hash.c
    ! Fixed memory leak (few more are still pending).

  * source/vm/classes.c
    - Removed outdated comments.

2004-02-21 09:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/trim.c
    ! minor changes on function linkage.

2004-02-21 08:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/hvm.c
    ! changes to make return type Clipper compatible if parameter passed
      is of a memo type.

      /*
      I am not sure if I am bringing a Clipper "bug" here.
      */

2004-02-21 07:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/trim.c
    ! changes to make return type Clipper compatible

2004-02-20 14:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/libct/ctc.c
  * contrib/rdd_ads/ads1.c
  * source/rdd/dbcmd.c
  * source/rdd/dbf1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfdbt/dbfdbt1.c
  * source/rdd/dbffpt/dbffpt1.c
  * source/rdd/dbfntx/dbfntx1.c
  * source/rtl/math.c
  * source/rtl/pplib.c
  * source/vm/memvars.c
    - Replaced hb_errRelease( pError ) with faster hb_itemRelease( pError )

  * source/vm/errorapi.c